# protein-molecule-ai-playground

./: README.md  Untitled.ipynb  pyproject.toml
data/clean/: train.parquet  train_meta.json
data/raw/: chembl_kinase_activities.json  chembl_kinase_activities.parquet
molplay/: __init__.py  features.py  generate.py  models.py  train.py  utils.py
molplay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
molplay/data/: fetch.py  prepare.py
molplay/data/static/: chembl_kinase_sample.csv
notebooks/: 01_dataset.executed.ipynb  01_dataset.ipynb  02_train.ipynb  03_generate.ipynb
notebooks/.ipynb_checkpoints/: 01_dataset.executed-checkpoint.ipynb  03_generate-checkpoint.ipynb
outputs/: generated.csv  metrics.json
outputs/models/: baseline_latest.joblib  gnn_latest.pt
scripts/: execute_notebook.py
tests/: test_features.py
